[gd_scene load_steps=2 format=3 uid="uid://cjrfcap4dkgql"]

[ext_resource type="Script" path="res://scene/main.gd" id="1_q4f3g"]

[node name="Main" type="Node2D"]
script = ExtResource("1_q4f3g")

[node name="CreateServer" type="Button" parent="."]
offset_left = 134.0
offset_top = 21.0
offset_right = 276.0
offset_bottom = 86.0
text = "Create Server"

[node name="JoinServer" type="Button" parent="."]
offset_left = 136.0
offset_top = 102.0
offset_right = 282.0
offset_bottom = 159.0
text = "Join Server"

[node name="Label" type="Label" parent="."]
offset_right = 136.0
offset_bottom = 171.0

[connection signal="pressed" from="CreateServer" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="JoinServer" to="." method="_on_join_server_pressed"]
